# abraflexi-mcp-server

./: .env.example  .gitignore  AGENTS.md  Containerfile  MCP_SETUP.md  README.md  abraflexi-mcp.spec  pyproject.toml  requirements.txt  server.json  setup.py  test_simple.py
abraflexi_mcp_server/: __init__.py  server.py
appimage/: AppRun  abraflexi-mcp-server.desktop  build-appimage.sh
debian/: Jenkinsfile  abraflexi-mcp-server.docs  abraflexi-mcp-server.manpages  abraflexi-mcp-start.1  abraflexi-mcp-test.1  abraflexi-mcp.1  changelog  control  copyright  py3dist-overrides  rules
scripts/: start_server.py  test_server.py
src/: abraflexi_mcp_server.py
